# kis-tradingbot

./: .gitignore  GITHUB_RULES.md  README.md  VERIFY_SETTINGS.md  package-lock.json  package.json
.github/: pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci-build.yml  ci-complete.yml  ci-contract.yml  ci-lint.yml  ci-test.yml
.husky/: pre-commit
apps/terminal-backend/: Dockerfile  README.md  pyproject.toml
apps/terminal-backend/app/: __init__.py  main.py
apps/terminal-backend/app/api/: router.py
apps/terminal-backend/app/api/v1/: auth.py  health.py  history.py  orders.py  positions.py  symbols.py  watchlists.py  workspaces.py  ws_gateway.py
apps/terminal-backend/app/connectors/kis/: __init__.py  approval_manager.py  rest_client.py  token_manager.py
apps/terminal-backend/app/core/: config.py  logging.py  security.py
apps/terminal-backend/app/dependencies/: __init__.py  kis.py
apps/terminal-backend/app/schemas/: auth.py  common.py  http.py  ws.py
apps/terminal-backend/docker/: docker-compose.yml
apps/terminal-backend/scripts/: check_env.sh  check_kis_docs.py
apps/terminal-backend/terminal_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/terminal-backend/tests/: test_health.py  test_routes.py
apps/terminal-ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vitest.setup.ts
apps/terminal-ui/dist-electron/: main.js  preload.js
docs/: project-map.md
scripts/: check-github-settings.html  verify-github-settings.sh
(+29 files in other folders)
